grid gap fix digga zum 3. mal

--- a/coordinates/coordinates-style.css
+++ b/coordinates/coordinates-style.css
@@ -11,7 +11,6 @@ body{
 .chessboard {
     display: grid;
     grid-template-columns: repeat(8, 75px);
-    grid-gap: 0.7px;
 }
 
 .square {
